fix: removed horizontal scroll in Promo

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,5 +1,5 @@
 .main {
   max-width: 1280px;
-  margin: 0 auto;
+  margin: 0;
+  width: 100%;
 }
-
